# Krishaa-Knowledge-Ingestor

./: .env.example  .gitignore  README.md  pyproject.toml
data/: ingestion_manifest.json
data/processed/: 1.1kv-epkj-1kv-xlpe.aff81f255327.json  1.1kv-epkt.e0d1f11b84b2.json  1.1kv-rlvj-1kv.b6c644824106.json  20240902-charcoat-ic---faq.f7a28356097d.json  20240902-charcoat-ic---method-statement.189bf7825f56.json  20240902-charcoat-ic---optimum-thickness---dft.84c9c64277e4.json  20240902-charcoat-ic---sec-mms---rtv-insulator-coatings.871cf50e55a1.json  20240902-charcoat-ic---use-of-an-insulator-primer.896f25d3291c.json  230311---charcoat-jf-brochure.e0f48d4a6972.json  240614---charcoat-cti-brochure.ffa5d43976c3.json  2501001-charcoat-cti-tds.12ad835a7617.json  250101---charcoat-packaging-list-002.0ccac1979d27.json  250101-charcoat-fm-tds.0c2813609d2b.json  250101-charcoat-fp-tds.dbc6a77c20fa.json  250101-charcoat-is-tds.fec02cafb995.json  250122---charcoat-sc-brochure.4eb3db6fa537.json  250528---charcoat-cc-tds.06b437365495.json  250528-charcoat-cc-tds.f97e831bd29b.json  250801---charcoat-introduction-brochure.b61ebedd1a5c.json  250828---charcoat-1709-brochure.8f8c358ce905.json  260101---charcoat-1709-brochure.5e46679dd50b.json  260201---charcoat-1709-tds.966b9bdd16a5.json  260601--charcoat-sc-tds.a8540cd83674.json  33kv-mxsw.41870c54ff91.json  52kv-heat-shrink-joint.3bebecfebe02.json  52kv-heat-shrink-termination.780de30d6e16.json  bbit1.85ba3252c3f1.json  bptm.ef62d084a505.json  cat-irj-cable-repair.0ca9d75415ad.json  (+47 more)
src/rag_ingestion/: __init__.py  (+14 more)
test/: test.py
(+10 files in other folders)
