[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krishaa-rag-ingestion"
version = "0.1.0"
description = "Production-ready RAG ingestion pipeline for product support PDFs and DOCX files."
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "openai>=1.40.0",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "python-docx>=1.1.2",
    "Pillow>=10.0.0",
    "qdrant-client>=1.11.0",
    "supabase>=2.7.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "tenacity>=8.5.0",
    "typer>=0.12.0",
    "tiktoken>=0.7.0"
]

[project.scripts]
rag-ingest = "rag_ingestion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
